--- a/mainpage.html
+++ b/mainpage.html
@@ -135,7 +135,7 @@
       <div class="main-content">
         <!-- 海報整體區域 -->
         <div class="poster-area">
-          <h3>FEATURED EVENT</h3>
+          <h3 style="background-color: yellow">FEATURED EVENT</h3>
           <!-- start of poster-section -->
           <section class="poster-section" id="Poster">
             <div class="poster-container" data-flipped="false">
@@ -191,7 +191,7 @@
             <div class="zine-item"></div>
           </div>
 
-          <h3>PROGRAMS</h3>
+          <h3 style="background-color: cyan">PROGRAMS</h3>
 
           <!-- Event Type 篩選器 -->
           <div class="event-filter-header">
@@ -238,7 +238,9 @@
       <div class="container">
         <!-- Agenda 標題行 -->
         <div class="agenda-header">
-          <h3>AGENDA</h3>
+          <h3 style="background-color: lightcoral">
+            The Grand Agenda of TAIPEI ART BOOK FAIR People
+          </h3>
           <div class="agenda-controls">
             <p class="agenda-subscribe">
               <a
