--- a/mainpage.html
+++ b/mainpage.html
@@ -105,7 +105,7 @@
       <div class="ticket-info">
         <div class="ticket-left-notch"></div>
         <div class="ticket-content">
-          <p>Tickets | 購票</p>
+          <p>參與草率季＆購票頁面</p>
         </div>
         <div class="ticket-right-notch"></div>
       </div>
@@ -135,7 +135,9 @@
       <div class="main-content">
         <!-- 海報整體區域 -->
         <div class="poster-area">
-          <h3 style="background-color: yellow">FEATURED EVENT</h3>
+          <h3 style="background-color: yellow; transform: rotate(2deg)">
+            FEATURED EVENT
+          </h3>
           <!-- start of poster-section -->
           <section class="poster-section" id="Poster">
             <div class="poster-container" data-flipped="false">
@@ -191,7 +193,9 @@
             <div class="zine-item"></div>
           </div>
 
-          <h3 style="background-color: cyan">PROGRAMS</h3>
+          <h3 style="background-color: cyan; transform: rotate(-3deg)">
+            PROGRAMS
+          </h3>
 
           <!-- Event Type 篩選器 -->
           <div class="event-filter-header">
@@ -238,7 +242,7 @@
       <div class="container">
         <!-- Agenda 標題行 -->
         <div class="agenda-header">
-          <h3 style="background-color: lightcoral">
+          <h3 style="background-color: lightcoral; transform: rotate(1deg)">
             The Grand Agenda of TAIPEI ART BOOK FAIR People
           </h3>
           <div class="agenda-controls">
