--- a/mainpage.html
+++ b/mainpage.html
@@ -65,7 +65,7 @@
               >NMHW</a
             >
           </li>
-          <li><a href="#exhibitors" id="nav-exhibitors">VACANVCIES</a></li>
+          <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
           <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li>
           <li><a href="#about" id="nav-about">ABOUT</a></li>
           <li>
