changing the words

--- a/mainpage.html
+++ b/mainpage.html
@@ -243,7 +243,7 @@
         <!-- Agenda 標題行 -->
         <div class="agenda-header">
           <h3 style="background-color: lightcoral; transform: rotate(1deg)">
-            The Grand Agenda of TAIPEI ART BOOK FAIR People
+            The Grand Agenda of the TAIPEI ART BOOK FAIR People
           </h3>
           <div class="agenda-controls">
             <p class="agenda-subscribe">
