last thing of today

--- a/mainpage.html
+++ b/mainpage.html
@@ -25,6 +25,10 @@
     <!-- 社交連結 - 保持固定 -->
     <div class="social-links">
       <div style="display: flex; justify-content: flex-end; margin-right: 16px">
+        <li class="language-switcher">
+          <button id="language-toggle" class="language-btn">English</button>
+        </li>
+        <p style="color: ghostwhite">FAQ</p>
         <p style="color: ghostwhite">INSTAGRAM</p>
         <p style="color: ghostwhite">FACEBOOK</p>
       </div>
@@ -54,9 +58,6 @@
     <nav class="nav-items-area sticky-nav">
       <div class="container">
         <ul class="nav-menu">
-          <li class="language-switcher">
-            <button id="language-toggle" class="language-btn">English</button>
-          </li>
           <li>
             <a
               href="https://nmhw.taipeiartbookfair.com/"
