--- a/ticket.html
+++ b/ticket.html
@@ -1001,7 +1001,7 @@
                 </div>
                 <a
                   id="student-btn"
-                  href="#"
+                  href="https://nmhw.taipeiartbookfair.com/products/%E5%AD%B8%E7%94%9F%E5%9C%98%E9%AB%94%E7%A5%A8"
                   class="ticket-btn"
                   data-zh="未開放"
                   data-en="Status: Not Yet Available"
@@ -1059,7 +1059,7 @@
                 </div>
                 <a
                   id="discount-btn"
-                  href="#"
+                  href="https://tour.ibon.com.tw/event/e2508000028lhmm"
                   class="ticket-btn"
                   data-zh="未開放"
                   data-en="Status: Not Yet Available"
