update file location

--- a/mainpage.html
+++ b/mainpage.html
@@ -28,7 +28,7 @@
         <li class="language-switcher">
           <button id="language-toggle" class="language-btn">English</button>
         </li>
-        <p style="color: ghostwhite">FAQ</p>
+        <!-- <p style="color: ghostwhite">FAQ</p> -->
         <p style="color: ghostwhite">INSTAGRAM</p>
         <p style="color: ghostwhite">FACEBOOK</p>
       </div>
@@ -66,8 +66,8 @@
               >NMHW</a
             >
           </li>
-          <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
-          <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li>
+          <!-- <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
+          <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li> -->
           <li><a href="#about" id="nav-about">ABOUT</a></li>
           <li>
             <a href="#contact" class="footer-link exhibitor-login"
@@ -655,9 +655,9 @@
         }
       }
     </script>
-    <script src="poster-flip.js"></script>
-    <script src="calender.js"></script>
-    <script src="duolanguage.js"></script>
+    <script src="js/poster-flip.js"></script>
+    <script src="js/calender.js"></script>
+    <script src="js/duolanguage.js"></script>
     <script src="js/event-photos.js"></script>
     <script src="js/homepage-zine.js"></script>
     <script src="js/exhibitor-display.js"></script>
@@ -688,5 +688,6 @@
         }, 1000); // 延遲1秒執行
       });
     </script>
+    <script src="js/homepage-zine.js"></script>
   </body>
 </html>
