--- a/mainpage.html
+++ b/mainpage.html
@@ -99,6 +99,12 @@
             <span class="exhibitor-name"></span>
             <span class="exhibitor-region"></span>
           </div>
+          <span class="exhibitor-separator">｜</span>
+          <div class="exhibitor-item-display">
+            <span class="exhibitor-booth-number"></span>
+            <span class="exhibitor-name"></span>
+            <span class="exhibitor-region"></span>
+          </div>
         </div>
       </div>
 
@@ -160,7 +166,7 @@
                 <span class="arrow-left">←</span>
               </button>
               <div class="control-center" id="flipIndicator">
-                <span class="click-text">Click</span>
+                <span class="click-text">👆</span>
               </div>
               <button class="control-btn next-btn" id="nextPoster">
                 <span class="arrow-right">→</span>
@@ -241,6 +247,13 @@
     <!-- 時間軸模式區域 - 鋪滿下方 -->
     <section class="timeline-section" id="timelineSection">
       <div class="container">
+        <!-- 左側 Zine 區域 - 在時間軸左邊 -->
+        <div class="timeline-left-zine-container">
+          <div class="timeline-zine-item"></div>
+          <div class="timeline-zine-item"></div>
+          <div class="timeline-zine-item"></div>
+        </div>
+
         <!-- Agenda 標題行 -->
         <div class="agenda-header">
           <h3 style="background-color: lightcoral; transform: rotate(1deg)">
