--- a/mainpage.html
+++ b/mainpage.html
@@ -671,7 +671,7 @@
     <script src="js/poster-flip.js"></script>
     <script src="js/calender.js"></script>
     <script src="js/duolanguage.js"></script>
-    <script src="js/event-photos.js"></script>
+    <script src="mainpage_image_rotata.js"></script>
     <script src="js/homepage-zine.js"></script>
     <script src="js/exhibitor-display.js"></script>
 
