Add L-shaped timeline zine layout with enhanced book integration
- Add 3 vertical zines on left side of timeline
- Add 4 horizontal zines below timeline forming L-shape
- Integrate timeline zines with book loading system
- Update zine count from 14 to 22 total zines
- Maintain consistent sizing and vertical text orientation
- Add responsive design for desktop, tablet, and mobile

--- a/mainpage.html
+++ b/mainpage.html
@@ -247,11 +247,20 @@
     <!-- 時間軸模式區域 - 鋪滿下方 -->
     <section class="timeline-section" id="timelineSection">
       <div class="container">
-        <!-- 左側 Zine 區域 - 在時間軸左邊 -->
+        <!-- L 型 Zine 區域 - 包圍時間軸 -->
+        <!-- 左側垂直 Zine 區域 -->
         <div class="timeline-left-zine-container">
-          <div class="timeline-zine-item"></div>
-          <div class="timeline-zine-item"></div>
-          <div class="timeline-zine-item"></div>
+          <div class="timeline-zine-item timeline-zine-vertical"></div>
+          <div class="timeline-zine-item timeline-zine-vertical"></div>
+          <div class="timeline-zine-item timeline-zine-vertical"></div>
+        </div>
+        
+        <!-- 下方水平 Zine 區域 -->
+        <div class="timeline-bottom-zine-container">
+          <div class="timeline-zine-item timeline-zine-horizontal"></div>
+          <div class="timeline-zine-item timeline-zine-horizontal"></div>
+          <div class="timeline-zine-item timeline-zine-horizontal"></div>
+          <div class="timeline-zine-item timeline-zine-horizontal"></div>
         </div>
 
         <!-- Agenda 標題行 -->
