--- a/mainpage.html
+++ b/mainpage.html
@@ -45,8 +45,8 @@
           <button id="language-toggle" class="language-btn">English</button>
         </li>
         <!-- <p style="color: ghostwhite">FAQ</p> -->
-        <p style="color: ghostwhite">INSTAGRAM</p>
-        <p style="color: ghostwhite">FACEBOOK</p>
+        <p style="color: black">INSTAGRAM</p>
+        <p style="color: black">FACEBOOK</p>
       </div>
     </div>
 
@@ -57,14 +57,15 @@
           <a
             id="site-name"
             style="
-              font-family: 'Xiaoyuan-Trackpad', sans-serif;
-              color: lime;
-              text-shadow: 2px 2px black;
+              font-family: 'IBM Plex Sans JP', sans-serif;
+              color: black;
+              text-shadow: none;
               font-size: 4.5rem;
               line-height: 4rem;
               text-decoration: none;
+              font-weight: 400;
             "
-            ><b>TAIPEI ART BOOK FAIR</b></a
+            >TAIPEI ART BOOK FAIR</a
           >
         </div>
       </div>
@@ -171,7 +172,7 @@
       <div class="main-content">
         <!-- 海報整體區域 -->
         <div class="poster-area">
-          <h3 style="background-color: yellow; transform: rotate(2deg)">
+          <h3 style="background-color: white; border: 1px solid black; transform: rotate(2deg); color: black;">
             FEATURED EVENT
           </h3>
           <!-- start of poster-section -->
@@ -229,7 +230,7 @@
             <div class="zine-item"></div>
           </div>
 
-          <h3 style="background-color: cyan; transform: rotate(-3deg)">
+          <h3 style="background-color: white; border: 1px solid black; transform: rotate(-3deg); color: black;">
             PROGRAMS
           </h3>
 
@@ -294,8 +295,8 @@
 
         <!-- Agenda 標題行 -->
         <div class="agenda-header">
-          <h3 style="background-color: lightcoral; transform: rotate(1deg)">
-            The Grand Agenda of the TAIPEI ART BOOK FAIR People
+          <h3 style="background-color: white; border: 1px solid black; transform: rotate(1deg); color: black;">
+            The Grand Agenda of TAIPEI ART BOOK FAIR
           </h3>
           <div class="agenda-controls">
             <p class="agenda-subscribe">
@@ -365,7 +366,7 @@
 
       <span
         ><a
-          style="text-decoration: none; color: ghostwhite"
+          style="text-decoration: none; color: black"
           href="https://www.taipeiartbookfair.com/2025/ticket"
           target="_blank"
           >GET A TICKET</a
@@ -394,8 +395,8 @@
               <span
                 class="footer-text"
                 style="
-                  font-family: 'Xiaoyuan-01', sans-serif;
-                  color: lightgray;
+                  font-family: 'IBM Plex Sans JP', sans-serif;
+                  color: black;
                   font-size: 1.5rem;
                   vertical-align: middle;
                   transform: translateY(4px);
@@ -413,8 +414,8 @@
                   placeholder="Enter your email"
                   required=""
                   style="
-                    background: ghostwhite;
-                    color: lightslategrey;
+                    background: white;
+                    color: black;
                     font-size: 1rem;
                     width: 400px;
                     height: 35px;
@@ -422,8 +423,8 @@
                     font-family: inherit;
                     text-indent: 10px;
                     border-radius: 15px;
-                    border: none;
-                    box-shadow: inset black 1px 1px 5px;
+                    border: 1px solid black;
+                    box-shadow: none;
                   "
                 />
                 <!-- Error/Success Messages -->
@@ -480,10 +481,10 @@
                     id="mc-embedded-subscribe"
                     class="button"
                     style="
-                      background: transparent;
-                      color: lightgray;
+                      background: white;
+                      color: black;
                       font-size: 0.9rem;
-                      border: none;
+                      border: 1px solid black;
                       cursor: pointer;
                       white-space: nowrap;
                       padding: 8px 16px;
