--- a/mainpage.html
+++ b/mainpage.html
@@ -45,8 +45,8 @@
           <button id="language-toggle" class="language-btn">English</button>
         </li>
         <!-- <p style="color: ghostwhite">FAQ</p> -->
-        <p style="color: black">INSTAGRAM</p>
-        <p style="color: black">FACEBOOK</p>
+        <p style="color: MediumVioletRed">INSTAGRAM</p>
+        <p style="color: MediumVioletRed">FACEBOOK</p>
       </div>
     </div>
 
@@ -58,7 +58,7 @@
             id="site-name"
             style="
               font-family: 'IBM Plex Sans JP', sans-serif;
-              color: black;
+              color:  var(--main-color);
               text-shadow: none;
               font-size: 4.5rem;
               line-height: 4rem;
@@ -70,7 +70,6 @@
         </div>
       </div>
     </div>
-
     <!-- 導航項目區域 - Sticky -->
     <nav class="nav-items-area sticky-nav">
       <div class="container">
@@ -172,7 +171,7 @@
       <div class="main-content">
         <!-- 海報整體區域 -->
         <div class="poster-area">
-          <h3 style="background-color: white; border: 1px solid black; transform: rotate(2deg); color: black;">
+          <h3 style="transform: rotate(2deg);">
             FEATURED EVENT
           </h3>
           <!-- start of poster-section -->
@@ -230,7 +229,7 @@
             <div class="zine-item"></div>
           </div>
 
-          <h3 style="background-color: white; border: 1px solid black; transform: rotate(-3deg); color: black;">
+          <h3 style="transform: rotate(-3deg);">
             PROGRAMS
           </h3>
 
@@ -295,7 +294,7 @@
 
         <!-- Agenda 標題行 -->
         <div class="agenda-header">
-          <h3 style="background-color: white; border: 1px solid black; transform: rotate(1deg); color: black;">
+          <h3 style="transform: rotate(1deg);">
             The Grand Agenda of TAIPEI ART BOOK FAIR
           </h3>
           <div class="agenda-controls">
@@ -366,7 +365,7 @@
 
       <span
         ><a
-          style="text-decoration: none; color: black"
+          style="text-decoration: none; color: MediumVioletRed"
           href="https://www.taipeiartbookfair.com/2025/ticket"
           target="_blank"
           >GET A TICKET</a
@@ -396,7 +395,7 @@
                 class="footer-text"
                 style="
                   font-family: 'IBM Plex Sans JP', sans-serif;
-                  color: black;
+                  color: MediumVioletRed;
                   font-size: 1.5rem;
                   vertical-align: middle;
                   transform: translateY(4px);
@@ -414,8 +413,8 @@
                   placeholder="Enter your email"
                   required=""
                   style="
-                    background: white;
-                    color: black;
+                    background: HoneyDew;
+                    color: MediumVioletRed;
                     font-size: 1rem;
                     width: 400px;
                     height: 35px;
@@ -423,7 +422,7 @@
                     font-family: inherit;
                     text-indent: 10px;
                     border-radius: 15px;
-                    border: 1px solid black;
+                    border: 1px solid MediumVioletRed;
                     box-shadow: none;
                   "
                 />
@@ -481,10 +480,10 @@
                     id="mc-embedded-subscribe"
                     class="button"
                     style="
-                      background: white;
-                      color: black;
+                      background: HoneyDew;
+                      color: MediumVioletRed;
                       font-size: 0.9rem;
-                      border: 1px solid black;
+                      border: 1px solid MediumVioletRed;
                       cursor: pointer;
                       white-space: nowrap;
                       padding: 8px 16px;
