position let's go

--- a/ticketvisit.html
+++ b/ticketvisit.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=BioRhyme+Expanded:wght@200;300;400;700;800&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans+JP&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=BioRhyme+Expanded:wght@200;300;400;700;800&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="image/icon-1.ico" />
@@ -81,7 +81,7 @@
         margin: 0;
         padding: 0;
         background: var(--bg-primary);
-        font-family: "IBM Plex Sans JP", "IBM Plex Sans", "IBM Plex Mono", "Inclusive sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         line-height: 1.4;
         font-size: var(--font-md);
       }
@@ -93,7 +93,7 @@
         left: 0;
         right: 0;
         z-index: 200;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
       }
 
       .nav-row {
@@ -254,7 +254,7 @@
         color: var(--text-accent);
         margin-bottom: var(--spacing-lg);
         text-align: center;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.1em;
         border-bottom: 2px solid var(--border-secondary);
@@ -270,7 +270,7 @@
         color: var(--text-highlight);
         font-size: var(--font-lg);
         margin-bottom: var(--spacing-md);
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.05em;
       }
@@ -305,7 +305,7 @@
         text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         position: relative;
         z-index: 2;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.1em;
       }
@@ -316,7 +316,7 @@
         margin-bottom: var(--spacing-xl);
         position: relative;
         z-index: 2;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.05em;
       }
@@ -431,7 +431,7 @@
         margin-bottom: var(--spacing-md);
         text-align: center;
         font-weight: bold;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.05em;
       }
@@ -450,7 +450,7 @@
         font-weight: bold;
         text-align: center;
         margin-bottom: var(--spacing-md);
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
       }
 
       .ticket-details {
@@ -478,7 +478,7 @@
         border: none;
         cursor: pointer;
         font-size: var(--font-sm);
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.05em;
       }
@@ -515,7 +515,7 @@
         font-weight: bold;
         color: var(--text-accent);
         font-size: var(--font-sm);
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -552,7 +552,7 @@
         margin-bottom: var(--spacing-lg);
         text-align: center;
         font-weight: bold;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.1em;
       }
@@ -577,7 +577,7 @@
         color: var(--text-accent);
         margin-bottom: var(--spacing-xs);
         font-size: var(--font-sm);
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
       }
 
       .faq-answer {
@@ -605,7 +605,7 @@
         margin-bottom: var(--spacing-lg);
         text-align: center;
         font-weight: bold;
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.1em;
       }
@@ -622,7 +622,7 @@
         color: var(--text-highlight);
         margin-bottom: var(--spacing-md);
         font-size: var(--font-lg);
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.05em;
       }
