--- a/timeline.html
+++ b/timeline.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=BioRhyme+Expanded:wght@200;300;400;700;800&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans+JP&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=BioRhyme+Expanded:wght@200;300;400;700;800&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="image/icon-1.ico" />
@@ -27,7 +27,7 @@
       }
 
       body {
-        font-family: "IBM Plex Sans", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         background-color: var(--secondary-color);
         color: var(--main-color);
         overflow-x: hidden;
@@ -85,7 +85,7 @@
         background-color: var(--secondary-color);
         border: 1px solid var(--main-color);
         color: var(--main-color);
-        font-family: "IBM Plex Mono", monospace;
+        font-family: "Inclusive Sans", sans-serif;
         font-size: 0.7rem;
         text-align: center;
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
@@ -117,7 +117,7 @@
         text-shadow: none;
         padding: 1rem 2rem;
         margin-bottom: 2rem;
-        font-family: "IBM Plex Mono", monospace;
+        font-family: "Inclusive Sans", sans-serif;
         border-radius: 8px;
       }
 
@@ -162,7 +162,7 @@
         position: absolute;
         bottom: 0px;
         right: 0px;
-        font-family: "IBM Plex Mono", sans-serif;
+        font-family: "Inclusive Sans", sans-serif;
         font-size: 0.75rem;
         background: rgba(255, 255, 255, 0.9);
         padding: 10px;
@@ -222,7 +222,7 @@
       .agenda-subscribe a {
         color: var(--main-color);
         text-decoration: none;
-        font-family: "IBM Plex Mono", monospace;
+        font-family: "Inclusive Sans", sans-serif;
         font-size: 0.9rem;
         padding: 8px 16px;
         border: 1px solid var(--main-color);
@@ -319,9 +319,9 @@
         }
 
         .timeline-section h3 {
-          font-size: 1.5rem;
-          margin-bottom: 1rem;
-          font-family: "IBM Plex Mono", monospace;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+        font-family: "Inclusive Sans", sans-serif;
         }
 
         .timeline-section .timeline-mode-container {
