that's it for today

--- a/mainpage.html
+++ b/mainpage.html
@@ -147,13 +147,44 @@
 
         <!-- 中間 Zine 區域 - 在 poster 和 calender 之間 -->
         <div class="middle-zine-container">
-          <div class="middle-zine-item"></div>
-          <div class="middle-zine-item"></div>
-          <div class="middle-zine-item"></div>
-          <div class="middle-zine-item"></div>
-          <div class="right-zine-item"></div>
-          <div class="middle-zine-item"></div>
+          <div class="middle-zine-items-wrapper">
+            <div class="middle-zine-item"></div>
+            <div class="middle-zine-item"></div>
+            <div class="middle-zine-item"></div>
+            <div class="middle-zine-item"></div>
+            <div class="right-zine-item"></div>
+            <div class="middle-zine-item"></div>
+          </div>
         </div>
+
+        <!-- 活動圖片輪播區域 - 手機版專用 -->
+        <section class="event-gallery-section" id="eventGallery">
+          <hr class="event-gallery-divider">
+          <div class="event-gallery-container">
+            <div class="event-gallery-slider">
+              <div class="image-strip">
+                <img src="image/horizental/hori1.jpg" alt="Event 1" />
+                <img src="image/horizental/hori2.jpg" alt="Event 2" />
+                <img src="image/horizental/hori3.jpg" alt="Event 3" />
+                <img src="image/horizental/hori4.jpg" alt="Event 4" />
+                <img src="image/horizental/hori5.jpg" alt="Event 5" />
+                <img src="image/horizental/hori6.jpg" alt="Event 6" />
+                <img src="image/horizental/hori7.jpg" alt="Event 7" />
+                <img src="image/horizental/hori8.jpg" alt="Event 8" />
+                <img src="image/horizental/hori9.jpg" alt="Event 9" />
+                <img src="image/horizental/hori10.jpg" alt="Event 10" />
+                <!-- 重複圖片以實現無縫循環 -->
+                <img src="image/horizental/hori1.jpg" alt="Event 1" />
+                <img src="image/horizental/hori2.jpg" alt="Event 2" />
+                <img src="image/horizental/hori3.jpg" alt="Event 3" />
+                <img src="image/horizental/hori4.jpg" alt="Event 4" />
+                <img src="image/horizental/hori5.jpg" alt="Event 5" />
+                <img src="image/horizental/hori6.jpg" alt="Event 6" />
+              </div>
+            </div>
+          </div>
+          <hr class="event-gallery-divider">
+        </section>
 
         <!-- 條列模式區域 - 縮短寬度 -->
         <section class="calender-section card-section" id="calender">
@@ -195,6 +226,35 @@
             <button id="cardMode" class="mode-btn active"></button>
             <button id="timelineMode" class="mode-btn"></button>
           </div>
+        </section>
+
+        <!-- 第二個活動圖片輪播區域 - 手機版專用 -->
+        <section class="event-gallery-section event-gallery-section-2" id="eventGallery2">
+          <hr class="event-gallery-divider">
+          <div class="event-gallery-container">
+            <div class="event-gallery-slider">
+              <div class="image-strip">
+                <img src="image/horizental/hori11.jpg" alt="Event 11" />
+                <img src="image/horizental/hori12.jpg" alt="Event 12" />
+                <img src="image/horizental/hori13.jpg" alt="Event 13" />
+                <img src="image/horizental/hori14.jpg" alt="Event 14" />
+                <img src="image/horizental/hori15.jpg" alt="Event 15" />
+                <img src="image/horizental/hori16.jpg" alt="Event 16" />
+                <img src="image/horizental/hori17.jpg" alt="Event 17" />
+                <img src="image/horizental/hori18.jpg" alt="Event 18" />
+                <img src="image/horizental/hori19.jpg" alt="Event 19" />
+                <img src="image/horizental/hori20.jpg" alt="Event 20" />
+                <!-- 重複圖片以實現無縫循環 -->
+                <img src="image/horizental/hori11.jpg" alt="Event 11" />
+                <img src="image/horizental/hori12.jpg" alt="Event 12" />
+                <img src="image/horizental/hori13.jpg" alt="Event 13" />
+                <img src="image/horizental/hori14.jpg" alt="Event 14" />
+                <img src="image/horizental/hori15.jpg" alt="Event 15" />
+                <img src="image/horizental/hori16.jpg" alt="Event 16" />
+              </div>
+            </div>
+          </div>
+          <hr class="event-gallery-divider">
         </section>
         </div>
         <!-- end of top-content-wrapper -->
